--------------------------------------------------------------------------------
 Fusion 1.213 - August 29th, 2004
--------------------------------------------------------------------------------
- 10-20-04: Free'd a stringlist in script.pas. [Tsusai]
- 10-20-04: JCon: Character skills & level viewable. [Tsusai]
- 10-20-04: Another OnTouch improvement. OnTouch basically complete. [Tsusai]
- 10-19-04: OnTouch FUNCTIONAL. [Tsusai]
- 10-19-04: Added NPC header modification for OnTouch. Need char move modification. [Tsusai]
- 10-18-04: NPC Set logic fix. [Tsusai]
- 10-18-04: NPC Set can modify STR, AGI, VIT, etc. [Tsusai]
- 10-18-04: Reactivated and fixed NPC set option. [Tsusai]
- 10-18-04: Commented out non working, unused pre variables. [Tsusai]
- 10-17-04: Cleaned up the structure of #warp. [Trihan]
- 10-17-04: Cleaned up the structure of #goto and #summon. [Trihan]
- 10-17-04: Cleaned up the structure of #hstyle and #kill, and other minor fixes. [Trihan]
- 10-17-04: Added 'Tested & Confirmed' 9 character slot support. [AlexKreuz]
- 10-17-04: ISCS: Moved default channel back to #Fusion. [AlexKreuz]
- 10-16-04: REED: Optimized Castle/Parties/Guild Loading. [AlexKreuz]
- 10-16-04: REED: Restructured Castle Saving. [AlexKreuz]
- 10-16-04: ISCS: Provided option to turn off ISCS on startup. [AlexKreuz]
- 10-16-04: REED: Restructured Guild saving (2/2). [AlexKreuz]
- 10-15-04: Cleaned up the structure of #hcolor and #ccolor. [Trihan]
- 10-15-04: Cleaned up the structure of #auto. [Trihan]
- 10-15-04: Cleaned up the structure of #alive and #item. [Trihan]
- 10-15-04: Made some changes to @where. [Trihan]
- 10-15-04: REED: Restructured Guild saving (1/2). [AlexKreuz]
- 10-15-04: Uncommented packet debugs from game.pas -- Pay attention when committing. [AlexKreuz]
- 10-14-04: Added @whomap, @whomap2 and @whomap3. [Trihan]
- 10-14-04: Added High jobs to @who2. [Tsusai]
- 10-14-04: Fixed GM_JOB to display new job number correctly. [Tsusai]